Портирован великий и ужасный chmo.js Добавлен быстрый переход в /song/ Пофикшены текцщие треки

--- a/anonPoster/Properties/Settings.settings
+++ b/anonPoster/Properties/Settings.settings
@@ -29,5 +29,8 @@
     <Setting Name="warnAboutTrackChange" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="doChmo" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
