Проверка орфографии через Hunspell (словари можно спиздить из https://extensions.libreoffice.org/extensions?getCategories=Dictionary&getCompatibility=any ) Hunspell подгружается в рантайме, так что необходимым не является. Можно вырезать все его dll, а постилка продолжит жить Шапочка Аудиоплеер Ключ /bg для запуска в свёрнутом состоянии Возможность прописаться в автозапуске
Поправлены WebClient-ы. Теперь открытых соединений должно быть меньше.
Поправлено меню с последними треками

--- a/anonPoster/Properties/Settings.settings
+++ b/anonPoster/Properties/Settings.settings
@@ -29,7 +29,19 @@
     <Setting Name="warnAboutTrackChange" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
-    <Setting Name="doChmo" Type="System.Boolean" Scope="User">
+    <Setting Name="useHunspell" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="audioUseSSL" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="audioQuality" Type="System.Byte" Scope="User">
+      <Value Profile="(Default)">64</Value>
+    </Setting>
+    <Setting Name="startInBackground" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="useChmo" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
   </Settings>
