--- a/anonPoster/app.config
+++ b/anonPoster/app.config
@@ -34,7 +34,19 @@
             <setting name="warnAboutTrackChange" serializeAs="String">
                 <value>False</value>
             </setting>
-            <setting name="doChmo" serializeAs="String">
+            <setting name="useHunspell" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="audioUseSSL" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="audioQuality" serializeAs="String">
+                <value>64</value>
+            </setting>
+            <setting name="startInBackground" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="useChmo" serializeAs="String">
                 <value>True</value>
             </setting>
         </anonPoster.Properties.Settings>
