--- a/anonPoster/anonPoster.csproj
+++ b/anonPoster/anonPoster.csproj
@@ -37,7 +37,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <FileAlignment>4096</FileAlignment>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -56,15 +56,32 @@
     <NoWin32Manifest>true</NoWin32Manifest>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MediaFoundation, Version=3.1.0.28761, Culture=neutral, PublicKeyToken=36fa660e1d6ebf8d, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>.\MediaFoundation.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.XML" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Autostart.cs" />
     <Compile Include="Chmo.cs" />
     <Compile Include="FindFile.cs" />
+    <Compile Include="LastTracksMenu.cs" />
+    <Compile Include="Player.cs" />
+    <Compile Include="RadioWatcher.cs" />
+    <Compile Include="Settings.cs" />
+    <Compile Include="SpellHunspell.cs" />
     <Compile Include="NativeMethods.cs" />
+    <Compile Include="NY.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NY.Designer.cs">
+      <DependentUpon>NY.cs</DependentUpon>
+    </Compile>
     <Compile Include="Prompt.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -97,6 +114,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="URLs.cs" />
+    <Compile Include="VideoWatcher.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -111,7 +129,9 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
+    <None Include="app.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -126,6 +146,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\graceOfGod.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\newYearHat.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="MediaFoundation.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
