Общее облагораживание Починка слежения за видимо (пришлось игнорировать ошибки TLS) Убирание шапочки бОльшая файлонезависимость (странная кнопка скрывается, если поблизости нет MediaFoundation.dll) Зачин обработки "Расписания"

--- a/anonPoster/Properties/Settings.settings
+++ b/anonPoster/Properties/Settings.settings
@@ -44,5 +44,11 @@
     <Setting Name="useChmo" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="hideErrors" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="watchSched" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
