--- a/anonPoster/app.config
+++ b/anonPoster/app.config
@@ -49,6 +49,12 @@
             <setting name="useChmo" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="hideErrors" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="watchSched" serializeAs="String">
+                <value>False</value>
+            </setting>
         </anonPoster.Properties.Settings>
     </userSettings>
 </configuration>
